[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tsfm-backtest"
version = "0.1.0"
description = "Point-in-time walk-forward backtesting for Chronos-2 vol-targeted portfolios"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.1",
    "pyarrow>=14",
    "numpy>=1.26",
    "yfinance>=0.2",
    "statsmodels>=0.14",
    "chronos-forecasting>=2.1",
    "torch>=2.1",
    "quantstats>=0.0.62",
    "matplotlib>=3.8",
    "plotly>=5.18",
    "scipy>=1.11",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "tabulate>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.1",
    "mypy>=1.7",
    "pre-commit>=3.6",
    "types-PyYAML",
    "pandas-stubs",
]

[project.scripts]
tsfm-backtest = "tsfm_backtest.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tsfm_backtest"]

[tool.hatch.build.targets.wheel.force-include]
"src/tsfm_backtest" = "tsfm_backtest"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
